--- a/Ded Jokes/index.html
+++ b/Ded Jokes/index.html
@@ -10,9 +10,10 @@
     
 </head>
 <body>
+    
     <div class="container">
-        <h1 class="heading">Dad Joke Generator</h1>
-        <p class="joke" id="joke">Dad Joke</p>
+        <h1 class="heading">Ded Jokes Generator</h1>
+        <p class="joke" id="joke">Ded Joke</p>
         <button class="btn" id="btn">Tell me a jokes</button>
     </div>
     <script src="script.js"></script>
