--- a/English Dictionary/Index.html
+++ b/English Dictionary/Index.html
@@ -11,8 +11,8 @@
     <div class="container">
         <h1 class="heading">English Dictionary</h1>
         <input placeholder="Search a word" type="text" class="input" id="input">
-        <p class="info-text" id="info-text">Type a word and press entyer</p>
-        <div class="meaning-container" id="meaning-container">
+        <p class="text" id="text">Type a word and press enter</p>
+        <div class="meaningco" id="meaningco">
             <p>Word titel: <span class="title" id="title">____</span></p>
             <p>meaning: <span class="meaning" id="meaning">____</span></p>
             <audio src="" controls class="audio" id="audio"></audio>
