--- a/Anime pics/index.html
+++ b/Anime pics/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-       <h3>Anime pics</h1> 
+    <div class="animecontainer">
+       <h1>Anime pics</h1> 
         <button class="btn" id="btn">Get pics</button>
         <div class="anime">
             <img class="animeimg" src="https://media.istockphoto.com/id/1188980757/vector/young-man-anime-style-character.jpg?s=612x612&w=0&k=20&c=uOfXeG7GdMpLqEXPDNA8KbZgEZdIDk9JhvAfIE1_D9A=" alt="">
