--- a/Currency convertor/index.html
+++ b/Currency convertor/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currency Converter</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet"> -->
 </head>
 <body>
     <div class="container">
@@ -19,11 +21,12 @@
             <option value="JPY">JPY</option>
             <option value="USD" selected>USD</option>
             </select>
+        
             <input type="number" id="worth1" value="1" min="0">
         </div>
         <div class="currency">
             <select id="second">
-            <option value="AUD">AUD</option>
+            <option class="op" value="AUD">AUD</option>
             <!-- <option value="CDA">CDA</option> -->
             <option value="EUR">EUR</option>
             <option value="GPB">GBP</option>
