--- a/Digital clock/index.html
+++ b/Digital clock/index.html
@@ -13,6 +13,7 @@
     <title>Digital Clock</title>
 </head>
 <body>
+    <div class="container">
     <h2>Digital Clock</h2>
     <div class="clock">
         <div>
@@ -22,14 +23,18 @@
         <div>
             <span id="minutes">00</span>
             <span class="text">Minutes</span>
+            <br><br><br>
+        <div class="ampm">
+            <span id="ampm" style="color: aliceblue;">AM</span>
+        </div>
         </div>
         <div>
             <span id="Seconds">00</span>
             <span class="text">Seconds</span>
+            <br><br><br>
+           
         </div>
-        <div>
-            <span id="ampm">AM</span>
-        </div>
+    </div>
     </div>
     <script src="script.js"></script>
 </body>
