--- a/Darkwizards/index.html
+++ b/Darkwizards/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Darkwizards</title>
-    <!-- google font -->
+
+    <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -21,7 +22,7 @@
 
   <body>
     <nav id="navigation-sec" class="navigation">
-      <a href="#" class="logo">Dark <span style="color: rgb(255, 255, 255)">wizards</span></a>
+      <a href="#" class="logo">Dark <span style="color: rgb(255, 255, 255)">wizard</span></a>
       <ul class="nav">
         <li class="nav-item">
           <a class="nav-link active" href="#header-sec">Home</a>
@@ -40,7 +41,7 @@
 
     <header id="header-sec" class="header">
       <div class="intro">
-        <img src="#" alt="intro" class="intro-img" />
+        <img src="614177.jpg" alt="intro" class="intro-img" />
         <h3 class="intro-heading">
           Reach your Potential with our
           <span style="color: purple">Outdoor and indoor </span>Program.<br />And fall in
@@ -120,30 +121,30 @@
 
     <section id="services-sec" class="services">
       <div>
-        <h5 class="heading">Find What you love</h5>
+        <h5 class="heading">Find What your choice</h5>
         <h2 class="about-body">
           Sculpt your ideal body, Free your true self, Transform your life
         </h2>
       </div>
       <div class="services-info">
         <div class="services-img-block">
-          <img src="#" alt="lotus" class="services-img" />
+          <img src="#" alt="templates" class="services-img" />
         </div>
 
         <div class="services-img-block">
-          <img src="#" alt="yoga" class="services-img" />
+          <img src="#" alt="web desigin" class="services-img" />
         </div>
 
         <div class="services-img-block">
-          <img src="#" alt="brain" class="services-img" />
+          <img src="#" alt="web projects" class="services-img" />
         </div>
 
         <div class="services-img-block">
-          <img src="#" alt="brain" class="services-img" />
+          <img src="#" alt="devolepment" class="services-img" />
         </div>
       </div>
       <div class="button-sub-1">
-        <input type="button" value="Find your Pick" class="btn" />
+        <input type="button" value="Find your interest" class="btn" />
       </div>
     </section>
 
